--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,18 @@ button:hover {
   }
 }
 
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+
+  button {
+    background-color: #f9f9f9;
+    border-radius: 14px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   h1 {
     font-size: 2em;
